stylesheet overflow fix
1. Removed body overflow: hidden from styles.css
2. Made styles-index-and-404.css with overflow:hidden for index.html
and 404.html

--- a/styles-index-and-404.css
+++ b/styles-index-and-404.css
@@ -1,6 +1,7 @@
 body {
 	font-family: "Lucida Console", Courier, monospace;
 	text-align: center;
+	overflow: hidden;
 }
 
 h1 {
